connected to MongoDB and added some logic to authService

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SENDER_EMAIL=no-reply@doclearn.ru
 SMTP_PASS=hlwikkurumbnhsdg
+MONGO_URI=mongodb+srv://doclearn66:oxPt9JY4I1ePOklO@cluster0.7lceasn.mongodb.net/DOCLEARN?retryWrites=true&w=majority
