--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
