--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node server.ts",
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register server.ts"
+    "build": "tsc",
+    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.8",
     "@types/nodemailer": "^6.4.17",
