connected to MongoDB and added some logic to authService

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SENDER_EMAIL=no-reply@doclearn.ru
 SMTP_PASS=hlwikkurumbnhsdg
 MONGO_URI=mongodb+srv://doclearn66:oxPt9JY4I1ePOklO@cluster0.7lceasn.mongodb.net/DOCLEARN?retryWrites=true&w=majority
+JWT_SECRET=Qv5vM@e2f9q!Lz7#HgK8pRtWxY3nUd$AvB0sTmJ6oCiXrEqG
