--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ SENDER_EMAIL=no-reply@doclearn.ru
 SMTP_PASS=hlwikkurumbnhsdg
 MONGO_URI=mongodb+srv://doclearn66:oxPt9JY4I1ePOklO@cluster0.7lceasn.mongodb.net/DOCLEARN?retryWrites=true&w=majority
 JWT_SECRET=Qv5vM@e2f9q!Lz7#HgK8pRtWxY3nUd$AvB0sTmJ6oCiXrEqG
+GCS_KEY_PATH=./service-account.json
+GCS_PROJECT_ID=carwash-master
+GCS_BUCKET_NAME=dl-ld-scm
