--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
@@ -35,6 +36,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.13.8",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
