--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
+    "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.13.8",
     "@types/nodemailer": "^6.4.17",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
     "tsconfig-paths": "^4.2.0"
