some new logic for uploading documents

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ JWT_SECRET=Qv5vM@e2f9q!Lz7#HgK8pRtWxY3nUd$AvB0sTmJ6oCiXrEqG
 GCS_KEY_PATH=./service-account.json
 GCS_PROJECT_ID=carwash-master
 GCS_BUCKET_NAME=dl-ld-scm
+
+YANDEX_ACCESS_KEY=YCAJEudtRb_KuZ1SL-VNphuzZ
+YANDEX_SECRET_KEY=YCOHrKAHA9_APDBJnOitZk9-P7NOR1CnAP_R1clh
+YANDEX_BUCKET_NAME=doclearn
+YANDEX_REGION=ru-central1
